--- a/Hardware/KiCAD_Project_Files/BlueGiga_BLE112_XBee_Module.cmp
+++ b/Hardware/KiCAD_Project_Files/BlueGiga_BLE112_XBee_Module.cmp
@@ -1,80 +1,80 @@
-Cmp-Mod V01 Created by PcbNew date = 10/27/2014 10:20:26 PM
+Cmp-Mod V01 Created by Cvpcb (after 2015-mar-04 BZR unknown)-product   date = 5/2/2015 7:41:23 AM
 
 BeginCmp
 TimeStamp = /52771F50;
 Reference = C1;
 ValeurCmp = 1u;
-IdModule  = C0603;
+IdModule  = Passive:C0603;
 EndCmp
 
 BeginCmp
 TimeStamp = /52771F6F;
 Reference = C2;
 ValeurCmp = 1u;
-IdModule  = C0603;
+IdModule  = Passive:C0603;
 EndCmp
 
 BeginCmp
 TimeStamp = /52771F7A;
 Reference = C3;
 ValeurCmp = 1u;
-IdModule  = C0603;
+IdModule  = Passive:C0603;
 EndCmp
 
 BeginCmp
 TimeStamp = /5266027A;
 Reference = C4;
-ValeurCmp = 2.2u;
-IdModule  = C0603;
+ValeurCmp = 4.7u;
+IdModule  = Passive:C0603;
 EndCmp
 
 BeginCmp
 TimeStamp = /52660266;
 Reference = C5;
-ValeurCmp = 2.2u;
-IdModule  = C0603;
+ValeurCmp = 4.7u;
+IdModule  = Passive:C0603;
 EndCmp
 
 BeginCmp
 TimeStamp = /52771E69;
 Reference = C6;
 ValeurCmp = 0.47u;
-IdModule  = C0603;
-EndCmp
-
-BeginCmp
-TimeStamp = /52660248;
-Reference = J2;
-ValeurCmp = HEADER_F_XBEE_PTH;
-IdModule  = HEADER_XBEE;
+IdModule  = Passive:C0603;
 EndCmp
 
 BeginCmp
 TimeStamp = /52660290;
 Reference = LK1;
 ValeurCmp = SOLDER_LINK;
-IdModule  = SOLDER_LINK;
+IdModule  = Passive:SOLDER_LINK;
 EndCmp
 
 BeginCmp
-TimeStamp = /52804632;
+TimeStamp = /52660248;
 Reference = P1;
-ValeurCmp = HEADER_2X5;
-IdModule  = HEADER_50MIL_2R10P_SMT;
+ValeurCmp = XBEE HEADER;
+IdModule  = Header:HEADER_50MIL_2R10P_SMT;
+EndCmp
+
+BeginCmp
+TimeStamp = /553AE09D;
+Reference = P2;
+ValeurCmp = DEBUG;
+IdModule  = Header:HEADER_50MIL_2R10P_SMT;
 EndCmp
 
 BeginCmp
 TimeStamp = /52578A70;
 Reference = U1;
 ValeurCmp = BLE112-A;
-IdModule  = BLE112;
+IdModule  = RF_Modules:BLE112;
 EndCmp
 
 BeginCmp
 TimeStamp = /527EC570;
 Reference = U2;
-ValeurCmp = AAT3221;
-IdModule  = SOT23-5_SMT;
+ValeurCmp = DNP;
+IdModule  = Active:SOT23-5_SMT;
 EndCmp
 
 EndListe
